--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,16 @@
 {
-    "name": "pigochu/yii2-jquery-locationpicker",
+    "name": "antonyz89/yii2-jquery-locationpicker",
     "description": "jquery location picker widget for yii2",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","locationpicker"],
-    "homepage": "https://github.com/pigochu/yii2-jquery-locationpicker",
+    "homepage": "https://github.com/antonyz89/yii2-jquery-locationpicker",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Pigo Chu",
-            "email": "pigochu@gmail.com"
-        }
-    ],
     "require": {
         "bower-asset/jquery-locationpicker-plugin" : ">=0.1.15"
     },
     "autoload": {
         "psr-4": {
-            "pigolab\\locationpicker\\": ""
+            "antonyz89\\locationpicker\\": ""
         }
     }
 }
